@@ -2632,7 +2632,31 @@
 (display '((bytevector->u8-list #vu8(1 2 3 4))))
 (display ", expects ")
 (display '(1 2 3 4))
-(set! *test-ret* (bytevector->u8-list #vu8(1 2 3 4)))(if (equal? *test-ret* '(1 2 3 4)) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector->u8-list #vu8(1 2 3 4)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector->u8-list #vu8(1 2 3 4))))))(if (null? *test-error*)
+(set! *test-ret* (bytevector->u8-list #vu8(1 2 3 4)))(if (equal? *test-ret* '(1 2 3 4)) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector->u8-list #vu8(1 2 3 4)) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector->u8-list #vu8(1 2 3 4))))))(display "test ")
+(display '((bytevector-u16-ref #vu8(255 0) 0 'little)))
+(display ", expects ")
+(display '65280)
+(set! *test-ret* (bytevector-u16-ref #vu8(255 0) 0 'little))(if (equal? *test-ret* '65280) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector-u16-ref #vu8(255 0) 0 'little) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector-u16-ref #vu8(255 0) 0 'little)))))(display "test ")
+(display '((bytevector-u16-ref #vu8(255 0) 0 'big)))
+(display ", expects ")
+(display '255)
+(set! *test-ret* (bytevector-u16-ref #vu8(255 0) 0 'big))(if (equal? *test-ret* '255) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector-u16-ref #vu8(255 0) 0 'big) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector-u16-ref #vu8(255 0) 0 'big)))))(display "test ")
+(display '((equal? 'error (guard (con (#t 'error)) (bytevector-u16-ref #vu8(255 0) 1 'little)))))
+(display ", expects ")
+(display '#t)
+(set! *test-ret* (equal? 'error (guard (con (#t 'error)) (bytevector-u16-ref #vu8(255 0) 1 'little))))(if (equal? *test-ret* '#t) (display " ===> ok\n") (begin (set! *test-error* (cons '(equal? 'error (guard (con (#t 'error)) (bytevector-u16-ref #vu8(255 0) 1 'little))) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((equal? 'error (guard (con (#t 'error)) (bytevector-u16-ref #vu8(255 0) 1 'little)))))))(display "test ")
+(display '((equal? 'error (guard (con (#t 'error)) (bytevector-u16-ref #vu8(255 0) 1 'big)))))
+(display ", expects ")
+(display '#t)
+(set! *test-ret* (equal? 'error (guard (con (#t 'error)) (bytevector-u16-ref #vu8(255 0) 1 'big))))(if (equal? *test-ret* '#t) (display " ===> ok\n") (begin (set! *test-error* (cons '(equal? 'error (guard (con (#t 'error)) (bytevector-u16-ref #vu8(255 0) 1 'big))) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((equal? 'error (guard (con (#t 'error)) (bytevector-u16-ref #vu8(255 0) 1 'big)))))))(display "test ")
+(display '((bytevector-s16-ref #vu8(255 253) 0 'big)))
+(display ", expects ")
+(display '-3)
+(set! *test-ret* (bytevector-s16-ref #vu8(255 253) 0 'big))(if (equal? *test-ret* '-3) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector-s16-ref #vu8(255 253) 0 'big) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector-s16-ref #vu8(255 253) 0 'big)))))(display "test ")
+(display '((bytevector-s16-ref #vu8(255 253) 0 'little)))
+(display ", expects ")
+(display '-3)
+(set! *test-ret* (bytevector-s16-ref #vu8(255 253) 0 'little))(if (equal? *test-ret* '-3) (display " ===> ok\n") (begin (set! *test-error* (cons '(bytevector-s16-ref #vu8(255 253) 0 'little) *test-error*)) (display " ===> NG got ") (write *test-ret*) (display "\n") (error "test" "test failed" '((bytevector-s16-ref #vu8(255 253) 0 'little)))))(if (null? *test-error*)
 (display "passed.
 ")
 (display *test-error*))
